Diversity stuff, un-recomb updates

--- a/consolidated_pipeline.ipynb
+++ b/consolidated_pipeline.ipynb
@@ -10,8 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-20 13:22:15.490820: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-11-20 13:22:15.490843: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+      "2022-11-21 09:39:30.294518: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-11-21 09:39:30.294539: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
      ]
     }
    ],
@@ -313,53 +313,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "38fae46c-ccb7-44dc-8a13-8869d068aced",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "original nodes -  682\n",
-      "final detokd -  706\n",
-      "maxend , 56\n",
-      "maxend , 57\n",
-      "maxend , 57\n",
-      "maxend , 57\n",
-      "maxend , 57\n",
-      "maxend , 57\n",
-      "maxend , 57\n",
-      "maxend , 57\n",
-      "maxend , 57\n",
-      "maxend , 57\n",
-      "SRC - Après tout, en tant que journaliste d'investigation en campagne, elle a enragé beaucoup d'autres gens outre Poutine, parmi lesquels l'actuel Premier ministre tchétchène Ramzan Kadyrov n'est pas des moindres, qu'elle a accusé de mener une politique d'enlèvements contre rançons. \n",
-      "PRED - </s> After all, as a field investigative journalist, she has instilled in many people besides Putin, including the current Chechen Prime Minister Ramzan Kadyrov, the least of kidnapping for ransom.\n",
-      "REF - After all, as a campaigning investigative journalist she made many people angry besides Putin, not least of which is the current Chechen Prime Minister, Ramzan Kadyrov, whom she accused of a policy of kidnapping for ransom. \n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(\"Après tout, en tant que journaliste d'investigation en campagne, elle a enragé beaucoup d'autres gens outre Poutine, parmi lesquels l'actuel Premier ministre tchétchène Ramzan Kadyrov n'est pas des moindres, qu'elle a accusé de mener une politique d'enlèvements contre rançons. \",\n",
-       " 'After all, as a campaigning investigative journalist she made many people angry besides Putin, not least of which is the current Chechen Prime Minister, Ramzan Kadyrov, whom she accused of a policy of kidnapping for ransom. ',\n",
-       " ['</s> After all, as a field investigative journalist, she has instilled in many people besides Putin, including the current Chechen Prime Minister Ramzan Kadyrov, the least of kidnapping for ransom.',\n",
-       "  '</s> After all, as a field investigative journalist, she has ensnared many others besides Putin, including the current Chechen Prime Minister Ramzan Kadyrov, whom she has accused of pursuing a policy.',\n",
-       "  '</s> After all, as a field investigating the countryside, she has in many other people besides Putin, including the current Chechen Prime Minister Ramzan Kadyrov, the least of kidnapping for ransom.',\n",
-       "  '</s> After all, as an investigative journalist working in the field, she in many other people besides Putin, including the current Chechen Prime Minister Ramzan Kadyrov, the least of kidnapping for ransom.',\n",
-       "  '</s> After all, as a field investigative journalist, she has instilled in many people besides Putin, including the current Chechen Prime Minister Ramzan Kadyrov, the least of kidnapping for ransom.',\n",
-       "  '</s> After all, as a field investigative journalist, she has instilled in many people besides Putin, including the current Chechen Prime Minister Ramzan Kadyrov, the least of kidnapping for ransom.',\n",
-       "  '</s> After all, as a field investigative journalist, she has instilled in many people besides Putin, including the current Chechen Prime Minister Ramzan Kadyrov, the least of kidnapping for ransom.',\n",
-       "  '</s> After all, as a field investigative journalist, she has instilled in many people besides Putin, including the current Chechen Prime Minister Ramzan Kadyrov, the least of kidnapping for ransom.',\n",
-       "  '</s> After all, as a field investigative journalist, she has instilled in many people besides Putin, including the current Chechen Prime Minister Ramzan Kadyrov, the least of kidnapping for ransom.',\n",
-       "  '</s> After all, as a field investigative journalist, she has instilled in many people besides Putin, including the current Chechen Prime Minister Ramzan Kadyrov, the least of kidnapping for ransom.'])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_graph_ind(0, base, weightadddiverse)"
    ]
@@ -420,30 +377,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "f5747567-46f2-4cb4-83dd-674b2ae07ca9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['</s> There is good reason to fearing that these increasingly marked divisions will find their way into the new composition of the majority in the European Parliament, making governance difficult, not to say impossible.',\n",
-       " '</s> There is good reason to fear that these increasingly marked divisions will find their way into the new composition of the majority in the European Parliament, making governance difficult, not to say impossible.',\n",
-       " '</s> There is good reason to fear that these increasingly marked divisions will find their way into the new composition of the majority in the European Parliament, making governance difficult, not to say impossible.',\n",
-       " '</s> There is good reason to fear that these increasingly marked divisions will find their way into the new composition of the majority in the European Parliament, making governance difficult, not to say impossible.',\n",
-       " '</s> There is good reason to fear that these increasingly marked divisions will find their way into the new composition of the majority in the European Parliament, making governance difficult, not to say impossible.',\n",
-       " '</s> There is good reason to fear that these increasingly marked divisions will find their way into the new composition of the majority in the European Parliament, making governance difficult, not to say impossible.',\n",
-       " '</s> There is good reason to fear that these increasingly marked divisions will find their way into the new composition of the majority in the European Parliament, making governance difficult, not to say impossible.',\n",
-       " '</s> There is good reason to fear that these increasingly marked divisions will find their way into the new composition of the majority in the European Parliament, making governance difficult, not to say impossible.',\n",
-       " '</s> There is good reason to fear that these increasingly marked divisions will find their way into the new composition of the majority in the European Parliament, making governance difficult, not to say impossible.',\n",
-       " '</s> There is good reason to fear that these increasingly marked divisions will find their way into the new composition of the majority in the European Parliament, making governance difficult, not to say impossible.']"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "weightaddprobdf.loc[5]['hyp']"
    ]
@@ -2290,7 +2227,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('latenv')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
