--- a/generate_tables.ipynb
+++ b/generate_tables.ipynb
@@ -10,8 +10,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-14 03:44:24.142362: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-11-14 03:44:24.142387: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+      "2022-11-26 05:55:53.309889: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-11-26 05:55:53.309911: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'comet'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mprocess_traindata\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m lset_to_explodeddf, load_cands, create_sortedbatch_data\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnew_mt_train\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m XLMCometRegressorAvg, XLMCometRegressor\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmt_scores\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_scores_auto\n",
+      "File \u001b[0;32m/mnt/data1/prasann/latticegen/lattice-generation/process_traindata.py:3\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjson\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrandom\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmt_scores\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_scores_auto\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwarnings\u001b[39;00m\n\u001b[1;32m      5\u001b[0m warnings\u001b[38;5;241m.\u001b[39mfilterwarnings(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m/mnt/data1/prasann/latticegen/lattice-generation/mt_scores.py:9\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtransformers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m AutoTokenizer, AutoModelForSeq2SeqLM, AutoModelForSequenceClassification\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcomet\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m download_model, load_from_checkpoint\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdistill_comet\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_distill_model, run_distill_comet\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mCOMET\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcomet\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mregression\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mreferenceless\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ReferencelessRegression\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'comet'"
      ]
     }
    ],
@@ -73,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "7af344e8-b0d2-4cd1-94b7-5aed8c4063b7",
    "metadata": {},
    "outputs": [],
@@ -126,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9db740bc-6d01-4389-9aa1-88f3724b2fb9",
    "metadata": {},
    "outputs": [],
@@ -137,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "id": "8c775c90-84b2-4160-9b25-fd665eace5b0",
    "metadata": {},
    "outputs": [],
@@ -156,6 +169,14 @@
     "        mbind = np.argmin(list(selected[metric])[:-1])\n",
     "    else:\n",
     "        mbind = np.argmax(list(selected[metric])[:-1])\n",
+    "    return list(selected[target])[mbind]\n",
+    "\n",
+    "# rerank single but ignore last thing in each batch\n",
+    "def rerank_nogweight(selected, metric, target):\n",
+    "    met = list(selected[metric])\n",
+    "    phoc = list(selected['posthoc'])\n",
+    "    newvec = [met[i]*.9-phoc[i]*1.25 for i in range(len(met))]\n",
+    "    mbind = np.argmax(newvec[:-1])\n",
     "    return list(selected[target])[mbind]\n",
     "\n",
     "# TODO changes for with / without gold\n",
@@ -181,23 +202,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
+   "id": "fca0d24b-8a2a-4b6f-8f73-95e84512f591",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bcdf50 = pd.read_csv(\"torchsaved/bc50en_decomet.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "f9db4288-a96a-46c2-9e8b-7922ce30c54e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "latencheck = pd.read_csv(\"torchsaved/testdataen_decomet.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b76d14ee-843d-4be6-b012-1182975a653b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0.1', 'Unnamed: 0', 'src', 'hyp', 'ref', 'utscore', 'cqe',\n",
+       "       'posthoc', 'comet', 'dupcqe'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bcdf50.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "id": "e81f272f-6628-4e66-9877-25df401af583",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6362799907511189"
+       "0.5259554890436785"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rerank_df(bcdf50, rerank_weighted, ['comet', 'comet'])"
+    "rerank_df(latencheck, rerank_nogweight, ['dupcqe', 'comet'])"
    ]
   },
   {
