--- a/lattice_deg_explore.ipynb
+++ b/lattice_deg_explore.ipynb
@@ -10,8 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-09 10:10:57.159559: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-11-09 10:10:57.159581: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+      "2022-11-25 11:13:30.996104: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-11-25 11:13:30.996125: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
      ]
     }
    ],
@@ -37,27 +37,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "ec49c06d-4342-4ed1-b3f9-dc6d08e0295c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cdf = cands_df(\"testbeam1fr_en.jsonl\")"
+    "cdf = cands_df(\"testbeam50fr_en.jsonl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
+   "id": "ce4a817c-1f06-4eb3-aed7-3de78d77443f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cdf = pd.read_csv(\"torchsaved/testdataen_decomet.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "0678bc8a-c3ea-4602-9a88-b9cef0caeaba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#cdf.to_csv(\"torchsaved/testdataen_decomet.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "16cee94b-fd3e-47b8-92b0-cba7f345effc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['adhoc', 'ahyp', 'src', 'ref'], dtype='object')"
+       "Index(['Unnamed: 0', 'src', 'hyp', 'ref', 'comet', 'utscore', 'cqe',\n",
+       "       'posthoc'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +90,379 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
+   "id": "e9566620-c76d-4de3-9bba-709a0c849a89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hyps = cdf['hyp']\n",
+    "srcs = cdf['src']\n",
+    "refs = cdf['ref']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "6b8f49df-dec3-4b9c-974e-bd7cc4dd7655",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cdf['dupcqe'] = dupcqe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "5fb62d6f-d69c-4740-b8cc-42051efe8985",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at xlm-roberta-base were not used when initializing XLMRobertaModel: ['roberta.pooler.dense.weight', 'lm_head.dense.bias', 'lm_head.layer_norm.weight', 'lm_head.bias', 'roberta.pooler.dense.bias', 'lm_head.layer_norm.bias', 'lm_head.decoder.weight', 'lm_head.dense.weight']\n",
+      "- This IS expected if you are initializing XLMRobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing XLMRobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Encoder model frozen.\n",
+      "Some weights of the model checkpoint at xlm-roberta-large were not used when initializing XLMRobertaModel: ['roberta.pooler.dense.weight', 'lm_head.dense.bias', 'lm_head.layer_norm.weight', 'lm_head.bias', 'lm_head.decoder.weight', 'lm_head.layer_norm.bias', 'roberta.pooler.dense.bias', 'lm_head.dense.weight']\n",
+      "- This IS expected if you are initializing XLMRobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing XLMRobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Encoder model frozen.\n",
+      "Loading weights from /mnt/data1/prasann/latticegen/lattice-generation/COMET/lightning_logs/version_0/checkpoints/epoch=9-step=220000.ckpt.\n",
+      "GPU available: True, used: True\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n",
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0,1,2,3]\n",
+      "Predicting DataLoader 0: 100%|████████████████████████████████████████████████████████████████████████| 1050/1050 [01:09<00:00, 15.05it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TOOK TIME  70.58\n"
+     ]
+    }
+   ],
+   "source": [
+    "dupcqe = get_scores_auto(hyps, srcs, refs, \"dupcqe\", \"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e86c6703-bcbc-472e-ab82-303fac3a9ec1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rerank_data import rerank_df, rerank_single"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7620705d-1a26-4e93-b64a-438ad9721af4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0                                                   47\n",
+       "src           WASHINGTON, DC – Former US Secretary of the Tr...\n",
+       "hyp           WASHINGTON, DC – Der ehemalige US-Außenministe...\n",
+       "ref           WASHINGTON, DC – Der frühere US-Finanzminister...\n",
+       "utscore                                                0.350056\n",
+       "cqe                                                    0.134089\n",
+       "posthoc                                                0.556394\n",
+       "comet                                                 -0.014908\n",
+       "dupcqe                                                 0.031338\n",
+       "Name: 47, dtype: object"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cdf.loc[47]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2361af3-0011-488f-a8a4-3010c61b5a0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rerank_df(cdf, rerank_single, [\"dupcqe\", \"comet\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b66111f9-bc8e-41c5-b111-dbcaec891c89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cdf['dupcqe'] = dupcqe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "bd6ce161-a3ae-41dc-8054-ae0366cb1d5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>src</th>\n",
+       "      <th>hyp</th>\n",
+       "      <th>ref</th>\n",
+       "      <th>utscore</th>\n",
+       "      <th>cqe</th>\n",
+       "      <th>posthoc</th>\n",
+       "      <th>comet</th>\n",
+       "      <th>dupcqe</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>WASHINGTON, DC – Former US Secretary of the Tr...</td>\n",
+       "      <td>WASHINGTON, DC – Der ehemalige US-Außenministe...</td>\n",
+       "      <td>WASHINGTON, DC – Der frühere US-Finanzminister...</td>\n",
+       "      <td>0.203789</td>\n",
+       "      <td>0.124026</td>\n",
+       "      <td>0.498397</td>\n",
+       "      <td>0.375253</td>\n",
+       "      <td>0.032462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>WASHINGTON, DC – Former US Secretary of the Tr...</td>\n",
+       "      <td>WASHINGTON, DC – Der ehemalige US-Außenministe...</td>\n",
+       "      <td>WASHINGTON, DC – Der frühere US-Finanzminister...</td>\n",
+       "      <td>0.214105</td>\n",
+       "      <td>0.112931</td>\n",
+       "      <td>0.528662</td>\n",
+       "      <td>-0.090839</td>\n",
+       "      <td>0.030513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>WASHINGTON, DC – Former US Secretary of the Tr...</td>\n",
+       "      <td>WASHINGTON, DC – Der ehemalige US-Außenministe...</td>\n",
+       "      <td>WASHINGTON, DC – Der frühere US-Finanzminister...</td>\n",
+       "      <td>0.260500</td>\n",
+       "      <td>0.049588</td>\n",
+       "      <td>0.499376</td>\n",
+       "      <td>0.392368</td>\n",
+       "      <td>0.032392</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>WASHINGTON, DC – Former US Secretary of the Tr...</td>\n",
+       "      <td>WASHINGTON, DC – Der ehemalige US-Außenministe...</td>\n",
+       "      <td>WASHINGTON, DC – Der frühere US-Finanzminister...</td>\n",
+       "      <td>0.178066</td>\n",
+       "      <td>0.153195</td>\n",
+       "      <td>0.534258</td>\n",
+       "      <td>0.011308</td>\n",
+       "      <td>0.029910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>WASHINGTON, DC – Former US Secretary of the Tr...</td>\n",
+       "      <td>WASHINGTON, DC – Der ehemalige US-Außenministe...</td>\n",
+       "      <td>WASHINGTON, DC – Der frühere US-Finanzminister...</td>\n",
+       "      <td>0.285359</td>\n",
+       "      <td>0.253685</td>\n",
+       "      <td>0.512033</td>\n",
+       "      <td>0.370970</td>\n",
+       "      <td>0.032610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52495</th>\n",
+       "      <td>52495</td>\n",
+       "      <td>● a major microeconomic restructuring of the e...</td>\n",
+       "      <td>● eine große mikroökonomische Umstrukturierung...</td>\n",
+       "      <td>● eine wichtige mikroökonomische Umstrukturier...</td>\n",
+       "      <td>0.333650</td>\n",
+       "      <td>0.301195</td>\n",
+       "      <td>0.602734</td>\n",
+       "      <td>0.536144</td>\n",
+       "      <td>0.030531</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52496</th>\n",
+       "      <td>52496</td>\n",
+       "      <td>● a major microeconomic restructuring of the e...</td>\n",
+       "      <td>● eine umfassende mikroökonomische Umstrukturi...</td>\n",
+       "      <td>● eine wichtige mikroökonomische Umstrukturier...</td>\n",
+       "      <td>0.325889</td>\n",
+       "      <td>0.292966</td>\n",
+       "      <td>0.609300</td>\n",
+       "      <td>0.534676</td>\n",
+       "      <td>0.028649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52497</th>\n",
+       "      <td>52497</td>\n",
+       "      <td>● a major microeconomic restructuring of the e...</td>\n",
+       "      <td>● eine große mikroökonomische Umstrukturierung...</td>\n",
+       "      <td>● eine wichtige mikroökonomische Umstrukturier...</td>\n",
+       "      <td>0.352464</td>\n",
+       "      <td>0.282010</td>\n",
+       "      <td>0.609693</td>\n",
+       "      <td>0.418139</td>\n",
+       "      <td>0.028331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52498</th>\n",
+       "      <td>52498</td>\n",
+       "      <td>● a major microeconomic restructuring of the e...</td>\n",
+       "      <td>● eine große mikroökonomische Umstrukturierung...</td>\n",
+       "      <td>● eine wichtige mikroökonomische Umstrukturier...</td>\n",
+       "      <td>0.401504</td>\n",
+       "      <td>0.316798</td>\n",
+       "      <td>0.611508</td>\n",
+       "      <td>0.361088</td>\n",
+       "      <td>0.029225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52499</th>\n",
+       "      <td>52499</td>\n",
+       "      <td>● a major microeconomic restructuring of the e...</td>\n",
+       "      <td>● eine große mikroökonomische Umstrukturierung...</td>\n",
+       "      <td>● eine wichtige mikroökonomische Umstrukturier...</td>\n",
+       "      <td>0.282588</td>\n",
+       "      <td>0.273804</td>\n",
+       "      <td>0.616765</td>\n",
+       "      <td>0.533905</td>\n",
+       "      <td>0.027590</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>52500 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Unnamed: 0                                                src  \\\n",
+       "0               0  WASHINGTON, DC – Former US Secretary of the Tr...   \n",
+       "1               1  WASHINGTON, DC – Former US Secretary of the Tr...   \n",
+       "2               2  WASHINGTON, DC – Former US Secretary of the Tr...   \n",
+       "3               3  WASHINGTON, DC – Former US Secretary of the Tr...   \n",
+       "4               4  WASHINGTON, DC – Former US Secretary of the Tr...   \n",
+       "...           ...                                                ...   \n",
+       "52495       52495  ● a major microeconomic restructuring of the e...   \n",
+       "52496       52496  ● a major microeconomic restructuring of the e...   \n",
+       "52497       52497  ● a major microeconomic restructuring of the e...   \n",
+       "52498       52498  ● a major microeconomic restructuring of the e...   \n",
+       "52499       52499  ● a major microeconomic restructuring of the e...   \n",
+       "\n",
+       "                                                     hyp  \\\n",
+       "0      WASHINGTON, DC – Der ehemalige US-Außenministe...   \n",
+       "1      WASHINGTON, DC – Der ehemalige US-Außenministe...   \n",
+       "2      WASHINGTON, DC – Der ehemalige US-Außenministe...   \n",
+       "3      WASHINGTON, DC – Der ehemalige US-Außenministe...   \n",
+       "4      WASHINGTON, DC – Der ehemalige US-Außenministe...   \n",
+       "...                                                  ...   \n",
+       "52495  ● eine große mikroökonomische Umstrukturierung...   \n",
+       "52496  ● eine umfassende mikroökonomische Umstrukturi...   \n",
+       "52497  ● eine große mikroökonomische Umstrukturierung...   \n",
+       "52498  ● eine große mikroökonomische Umstrukturierung...   \n",
+       "52499  ● eine große mikroökonomische Umstrukturierung...   \n",
+       "\n",
+       "                                                     ref   utscore       cqe  \\\n",
+       "0      WASHINGTON, DC – Der frühere US-Finanzminister...  0.203789  0.124026   \n",
+       "1      WASHINGTON, DC – Der frühere US-Finanzminister...  0.214105  0.112931   \n",
+       "2      WASHINGTON, DC – Der frühere US-Finanzminister...  0.260500  0.049588   \n",
+       "3      WASHINGTON, DC – Der frühere US-Finanzminister...  0.178066  0.153195   \n",
+       "4      WASHINGTON, DC – Der frühere US-Finanzminister...  0.285359  0.253685   \n",
+       "...                                                  ...       ...       ...   \n",
+       "52495  ● eine wichtige mikroökonomische Umstrukturier...  0.333650  0.301195   \n",
+       "52496  ● eine wichtige mikroökonomische Umstrukturier...  0.325889  0.292966   \n",
+       "52497  ● eine wichtige mikroökonomische Umstrukturier...  0.352464  0.282010   \n",
+       "52498  ● eine wichtige mikroökonomische Umstrukturier...  0.401504  0.316798   \n",
+       "52499  ● eine wichtige mikroökonomische Umstrukturier...  0.282588  0.273804   \n",
+       "\n",
+       "        posthoc     comet    dupcqe  \n",
+       "0      0.498397  0.375253  0.032462  \n",
+       "1      0.528662 -0.090839  0.030513  \n",
+       "2      0.499376  0.392368  0.032392  \n",
+       "3      0.534258  0.011308  0.029910  \n",
+       "4      0.512033  0.370970  0.032610  \n",
+       "...         ...       ...       ...  \n",
+       "52495  0.602734  0.536144  0.030531  \n",
+       "52496  0.609300  0.534676  0.028649  \n",
+       "52497  0.609693  0.418139  0.028331  \n",
+       "52498  0.611508  0.361088  0.029225  \n",
+       "52499  0.616765  0.533905  0.027590  \n",
+       "\n",
+       "[52500 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3323ae0d-6200-4247-a154-bb433d9f824e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#cdf.to_csv(\"torchsaved/bc50en_decomet.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "d8de34cd-c42c-43d5-a545-83474810cdc4",
    "metadata": {
     "tags": []
@@ -234,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "da5dac4c-bbff-48f2-a530-689fa86b7270",
    "metadata": {},
    "outputs": [],
@@ -1495,14 +1889,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "47b8aac6-5b21-4783-a083-65a857294ae9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "id": "edf55b94-88c5-45cc-a238-031f6ef44f39",
    "metadata": {},
@@ -1668,7 +2054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "b327be7a-e540-455c-80c9-5b33c1c005f2",
    "metadata": {},
    "outputs": [],
@@ -2541,7 +2927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "1dc3c3fa-10f0-4886-b5d4-f6d8ea0e61c3",
    "metadata": {},
    "outputs": [],
