--- a/generate_diverse.ipynb
+++ b/generate_diverse.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 1,
    "id": "bc3708c5-ec0f-47fc-a34a-1c7550df5de4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-11-26 05:56:23.823065: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-11-26 05:56:23.823087: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+     ]
+    }
+   ],
    "source": [
     "from efficient_rerank import run_pipeline, XLMCometEmbeds\n",
     "import torch\n",
@@ -166,13 +175,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "id": "4694d5ed-754f-4507-bacf-5680bc9957ce",
    "metadata": {},
    "outputs": [],
    "source": [
     "#apreds.to_csv(\"div1latpredsfr-en.csv\")\n",
     "apreds = pd.read_csv(\"div1latpredsfr-en.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3b409dbc-4b8e-4f72-ad2e-563e5778c216",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['</s> Another variable is the extent to which other developed countries’ monetary policies will become more flexible.',\n",
+       " '</s> Another variable is the degree to which other developed countries’ monetary policies will ease.',\n",
+       " '</s> Another variable is the extent to which monetary policies in other developed economies will be flexible.',\n",
+       " '</s> Another variable is the extent to which the monetary policies of other developed countries become more flexible.',\n",
+       " '</s> Another variable is the extent to which other developed countries’ monetary policies will ease.',\n",
+       " '</s> Another variable is the extent to which other developed countries’ monetary policies will ease.',\n",
+       " '</s> Another variable is the extent to which other developed countries’ monetary policies will ease.',\n",
+       " '</s> Another variable is the extent to which other developed countries’ monetary policies will ease.',\n",
+       " '</s> Another variable is the extent to which other developed countries’ monetary policies will ease.',\n",
+       " '</s> Another variable is the extent to which other developed countries’ monetary policies will ease.']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ast.literal_eval(apreds.loc[2]['hyp'])"
    ]
   },
   {
