--- a/generate_diverse.ipynb
+++ b/generate_diverse.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "from efficient_rerank import run_pipeline, XLMCometEmbeds\n",
     "import torch\n",
-    "device = torch.device('cuda:2' if torch.cuda.is_available() else 'cpu')\n",
+    "device = torch.device('cuda:1' if torch.cuda.is_available() else 'cpu')\n",
     "import pickle\n",
     "import pandas as pd\n",
     "import os\n",
@@ -817,7 +817,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "latenv",
    "language": "python",
    "name": "python3"
   },
@@ -831,7 +831,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.12 (default, Oct 12 2021, 13:49:34) \n[GCC 7.5.0]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c2f77846b0243d2dee26bbaa6fd0a0b34a7adea800a5063b4b91f2f98ac96800"
+   }
   }
  },
  "nbformat": 4,
