--- a/generate_diverse.ipynb
+++ b/generate_diverse.ipynb
@@ -817,7 +817,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "latenv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -831,7 +831,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12 (default, Oct 12 2021, 13:49:34) \n[GCC 7.5.0]"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
