bugfixes, main table done

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,8 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "53a8c23a-ca01-498e-b381-8af1e56392d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle as pkl\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "292d091d-acc0-419b-8716-c2f2a92ca599",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"outputs/graph_pickles/nounsum_exploded2/0\", \"rb\") as file:\n",
+    "    res = pkl.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "43d4f379-6ad0-49b7-8a37-267d2d0c5180",
+   "id": "4e222380-876e-43fa-a46b-dd480009a569",
    "metadata": {},
    "outputs": [],
    "source": []
